--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/stack": "^5.14.9",
     "expo": "~41.0.1",
     "expo-font": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
@@ -22,6 +25,7 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^1.0.0",
