--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
     "expo": "~41.0.1",
+    "expo-app-loading": "^2.1.1",
     "expo-font": "~9.1.0",
     "expo-splash-screen": "~0.10.2",
     "expo-updates": "~0.5.4",
+    "lottie-react-native": "3.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
