--- a/package.json
+++ b/package.json
@@ -11,44 +11,53 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
+    "@nozbe/watermelondb": "^0.25.5",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "6.0.2",
+    "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
     "axios": "^1.3.4",
     "date-fns": "^2.29.3",
-    "expo": "~41.0.1",
-    "expo-app-loading": "^2.1.1",
-    "expo-font": "~9.1.0",
-    "expo-splash-screen": "~0.10.2",
-    "expo-updates": "~0.5.4",
-    "lottie-react-native": "3.5.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "expo": "^43.0.0",
+    "expo-app-loading": "~1.2.1",
+    "expo-font": "~10.0.3",
+    "expo-image-picker": "~11.0.3",
+    "expo-splash-screen": "~0.13.5",
+    "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.15",
+    "lottie-react-native": "4.0.3",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-calendars": "^1.1294.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-svg": "^12.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-unimodules": "~0.13.3",
-    "react-native-web": "~0.13.12",
-    "styled-components": "^5.3.0"
+    "react-native-web": "0.17.1",
+    "styled-components": "^5.3.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-decorators": "^7.21.0",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "@types/styled-components-react-native": "^5.1.1",
-    "babel-preset-expo": "~8.3.0",
-    "jest-expo": "~41.0.0",
-    "typescript": "~4.0.0"
+    "babel-preset-expo": "8.5.1",
+    "jest-expo": "~43.0.1",
+    "react-test-renderer": "17.0.1",
+    "typescript": "^5.0.4"
   },
   "jest": {
     "preset": "react-native"
   },
-  "private": true
+  "private": true,
+  "name": "rentx",
+  "version": "1.0.0"
 }
