--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@nozbe/watermelondb": "^0.25.5",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/netinfo": "6.0.2",
+    "@react-native-community/netinfo": "^9.3.9",
     "@react-navigation/bottom-tabs": "^5.11.15",
     "@react-navigation/native": "^5.9.8",
     "@react-navigation/stack": "^5.14.9",
