--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-calendars": "^1.1294.0",
+    "react-native-fast-image": "8.3.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.2.0",
@@ -51,6 +52,7 @@
     "@types/styled-components-react-native": "^5.1.1",
     "babel-preset-expo": "8.5.1",
     "jest-expo": "~43.0.1",
+    "react-devtools": "^4.27.4",
     "react-test-renderer": "17.0.1",
     "typescript": "^5.0.4"
   },
